--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,10 @@
         </activity>
         <activity android:name=".activity.DataStatistic">
         </activity>
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan">
+
         </activity>
         <activity android:name=".activity.LoginActivity">
         </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
