--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,16 +52,15 @@
         </activity>
         <activity android:name=".activity.DataStatistic">
         </activity>
-        <activity
-            android:name=".activity.MainActivity"
-            >
+        <activity android:name=".activity.MainActivity">
         </activity>
         <activity android:name=".activity.LoginActivity">
         </activity>
         <activity
             android:name=".activity.InsertActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize"
-            ></activity>
+            android:windowSoftInputMode="stateVisible|adjustResize"/>
+        <activity android:name=".activity.DataManageActivitay">
+        </activity>
     </application>
 
 </manifest>
