--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan|adjustResize">
+            android:windowSoftInputMode="stateHidden|adjustPan">
 
         </activity>
         <activity android:name=".activity.LoginActivity">
