--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.Splash"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -28,38 +29,71 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FocusTypeActivity">
+        <activity
+            android:name=".activity.FocusTypeActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.ChangeFocusType">
+        <activity
+            android:name=".activity.ChangeFocusType"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.SetCurrenTask">
+        <activity
+            android:name=".activity.SetCurrenTask"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.TaskActivity">
+        <activity
+            android:name=".activity.TaskActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.TaskDetail">
+        <activity
+            android:name=".activity.TaskDetail"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.AddTask">
+        <activity
+            android:name=".activity.AddTask"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.UserActivity">
+        <activity
+            android:name=".activity.UserActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.AddUser">
+        <activity
+            android:name=".activity.AddUser"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.EditUser">
+        <activity
+            android:name=".activity.EditUser"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.ChangePsw">
+        <activity
+            android:name=".activity.ChangePsw"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.QueryResult">
+        <activity
+            android:name=".activity.QueryResult"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.DataStatistic">
+        <activity
+            android:name=".activity.DataStatistic"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.LoginActivity">
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activity.InsertActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustResize"/>
-        <activity android:name=".activity.DataManageActivitay">
+        <activity
+            android:name=".activity.DataManageActivitay"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.StatisticsActivity">
         </activity>
     </application>
 
