--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,8 @@
         </activity>
         <activity android:name=".activity.StatisticsActivity">
         </activity>
+        <activity android:name=".activity.CheakRecoderDetail">
+        </activity>
     </application>
 
 </manifest>
