--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,9 @@
         </activity>
         <activity android:name=".activity.StatisticsActivity">
         </activity>
-        <activity android:name=".activity.CheakRecoderDetail">
+        <activity
+            android:name=".activity.CheakRecoderDetail"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden">
         </activity>
     </application>
 
