--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.zengcanxiang.baseAdapter:baseadapter:1.3.0'
+    compile 'com.github.chrisbanes:PhotoView:1.2.6'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
