--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.zengcanxiang.baseAdapter:baseadapter:1.3.0'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.johnpersano:supertoasts:2.0'
 }
