--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.zengcanxiang.baseAdapter:baseadapter:1.3.0'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.johnpersano:supertoasts:2.0'
+    compile 'com.github.Pierry:SimpleToast:v1.7'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
