--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:value="579c5d8067e58ef7af0021f3" android:name="UMENG_APPKEY"></meta-data>
+        <meta-data android:value="tutu" android:name="UMENG_CHANNEL"/>
+
         <activity
             android:name=".activity.Splash"
             android:screenOrientation="portrait"
@@ -94,7 +98,7 @@
         </activity>
         <activity
             android:name=".activity.CheakRecoderDetail"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden">
+            >
         </activity>
         <activity
             android:name=".activity.ImagePagerActivity"
