--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,7 @@
         </activity>
         <activity
             android:name=".activity.CheakRecoderDetail"
+            android:windowSoftInputMode="adjustPan"
             >
         </activity>
         <activity
