--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,15 +94,18 @@
             android:name=".activity.DataManageActivitay"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.StatisticsActivity">
+        <activity android:name=".activity.StatisticsActivity"
+                  android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activity.CheakRecoderDetail"
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="stateVisible|adjustResize"
+            android:screenOrientation="portrait"
             >
         </activity>
         <activity
             android:name=".activity.ImagePagerActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified|stateHidden">
         </activity>
     </application>
